first angular app

--- a/01-app-one/src/app/app.component.html
+++ b/01-app-one/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1> First App </h1>
+<app-header>  </app-header>
+<!-- container es para que lo envuelva como en un box y m-5 para que le de espacios -->
+<div class="container m-5">
+    <app-body > </app-body>
+</div>
 
-<ul>
-<li>Name: {{ name }}</li>
-<li>Last name: {{ lastName }} </li>
-</ul>
+<app-footer></app-footer>
