--- a/02-single-page-application/src/app/components/pet/pet.component.html
+++ b/02-single-page-application/src/app/components/pet/pet.component.html
@@ -1,3 +1,34 @@
-<p>
-  pet works!
-</p>
+<h1>
+    {{ pet.name | uppercase }} <small> {{ pet.age }}</small>
+</h1>
+
+<hr>
+
+<div class='row'>
+    <div class='col-md-4'>
+        <img [src]="pet.img" class="img-fluid" alt="">
+        <br> <br>
+        <a [routerLink]="['/pets']" class="btn btn-outline-danger btn-block" href=""> Regresar </a>
+
+    </div>
+
+
+
+    <div class='col-md-8'>
+        <h3>
+            {{ pet.name }}
+        </h3>
+        <hr>
+        <p>
+            {{ pet.bio }}
+        </p>
+
+        <div>
+            <img *ngIf="pet.gender == 'F'" src="assets/images/female.png" [alt]="pet.gender">
+            <img *ngIf="pet.gender == 'M'" src="assets/images/male.png" [alt]="pet.gender">
+        </div>
+
+
+    </div>
+
+</div>
