--- a/02-single-page-application/src/app/components/pets/pets.component.html
+++ b/02-single-page-application/src/app/components/pets/pets.component.html
@@ -3,16 +3,16 @@
 
 
 <div class="card-columns">
-    <div class="card animated fadeIn fast" *ngFor="let pet of pets; let position = index">
+    <div class="card animated fadeIn fast " *ngFor="let pet of pets; let position = index">
 
-        <img class="card-img-top" [src]="pet.img" [alt]="pet.name">
+        <img class="card-img-top img-logo" [src]="pet.img" [alt]="pet.name">
         <div class="card-body">
             <h5 class="card-title">{{ pet.name }}</h5>
             <p class="card-text">{{ pet.bio }}</p>
             <p class="card-text"><small class="text-muted">{{ pet.age }}</small></p>
-            <button (click)="petDetail(position)" class="btn bnt-outline-primary btn-block"> 
+            <button (click)="petDetail(position)" class="btn btn-outline-primary btn-block"> 
               Más acerca de mi</button>
-            <a [routerLink]="['/pet',position]" class="btn bnt-outline-primary btn-block" href=""> Más Link</a>
+            <a [routerLink]="['/pet',position]" class="btn btn-outline-primary btn-block" href=""> Más Link</a>
         </div>
     </div>
 </div>
