--- a/02-single-page-application/src/styles.css
+++ b/02-single-page-application/src/styles.css
@@ -1,34 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
 
-body{
+body {
     padding-bottom: 50px;
 }
 
+.img-logo {
+    width: 230px;
+    height: 180px;
+}
+
+
 /*Css animations*/
+
 .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  }
-  
-  .fast {
+}
+
+.fast {
     -webkit-animation-duration: 0.4s;
     animation-duration: 0.4s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  }
-  
-  @keyframes fadeIn {
+}
+
+@keyframes fadeIn {
     from {
-      opacity: 0;
+        opacity: 0;
     }
-  
     to {
-      opacity: 1;
+        opacity: 1;
     }
-  }
-  
-  .fadeIn {
+}
+
+.fadeIn {
     animation-name: fadeIn;
-  }
+}
