--- a/02-single-page-application/src/app/components/filtered-pets/filtered-pets.component.html
+++ b/02-single-page-application/src/app/components/filtered-pets/filtered-pets.component.html
@@ -1,16 +1,15 @@
 <h1>Filtro: <small> {{ petFilter }}</small> </h1>
 <hr>
 
-
-<div class="card-columns">
-    <div class="card animated fadeIn fast " *ngFor="let pet of pets; let position = index">
-
-        <img class="card-img-top img-logo" [src]="pet.img" [alt]="pet.name">
-        <div class="card-body">
-            <h5 class="card-title">{{ pet.name }}</h5>
-            <p class="card-text">{{ pet.bio }}</p>
-            <p class="card-text"><small class="text-muted">{{ pet.age }}</small></p>
-            <a [routerLink]="['/pet',position]" class="btn btn-outline-primary btn-block" href=""> Más Link</a>
+<div class="row animated fadeIn fast" *ngIf="pets.length < 1">
+    <div class="col-md-12">
+        <div class="alert alert-info" role="alert">
+            No existen resuldos con nombre {{ petFilter }}
         </div>
     </div>
+</div>
+
+
+<div class="card-columns">
+    <app-pet-card [pet]="petIter" [position]="position" *ngFor="let petIter of pets; let position = index"></app-pet-card>
 </div>
