--- a/02-single-page-application/src/app/components/pet-card/pet-card.component.html
+++ b/02-single-page-application/src/app/components/pet-card/pet-card.component.html
@@ -5,6 +5,6 @@
         <h5 class="card-title">{{ pet.name }}</h5>
         <p class="card-text">{{ pet.bio }}</p>
         <p class="card-text"><small class="text-muted">{{ pet.age }}</small></p>
-        <a [routerLink]="['/pet',position]" class="btn btn-outline-primary btn-block" href=""> Más Link</a>
+        <button class="btn btn-outline-primary btn-block" (click)="petDetail()" > Ver más </button>
     </div>
 </div>
