--- a/02-single-page-application/src/app/components/pets/pets.component.html
+++ b/02-single-page-application/src/app/components/pets/pets.component.html
@@ -3,5 +3,5 @@
 
 
 <div class="card-columns">
-    <app-pet-card [pet]="petIter" [position]="position" *ngFor="let petIter of pets; let position = index"></app-pet-card>
+    <app-pet-card  (selectedPet) = "petDetail( $event )" [pet]="petIter" [position]="position" *ngFor="let petIter of pets; let position = index"></app-pet-card>
 </div>
