--- a/04-spotiapp/src/app/components/search/search.component.html
+++ b/04-spotiapp/src/app/components/search/search.component.html
@@ -1,3 +1,14 @@
-<p>
-  search works!
-</p>
+<div class="row">
+    <div class="col">
+        <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar Cantante">
+    </div>
+</div>
+
+<div class="card-columns">
+    <div class="card m-5" *ngFor="let artist of artistas">
+        <img class="card-img-top" [src]="artist.images[0].url" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">{{ artist.name }}</h5>
+        </div>
+    </div>
+</div>
