--- a/04-spotiapp/src/app/components/home/home.component.html
+++ b/04-spotiapp/src/app/components/home/home.component.html
@@ -2,4 +2,6 @@
   <li *ngFor="let pais of paises"> {{ pais.name }} - {{ pais.population|number }}  </li>
 </ul> -->
 
+<app-loading *ngIf="loading"></app-loading>
+
 <app-cards [items]="nuevasCanciones"></app-cards>
