--- a/04-spotiapp/src/app/components/home/home.component.html
+++ b/04-spotiapp/src/app/components/home/home.component.html
@@ -4,4 +4,11 @@
 
 <app-loading *ngIf="loading"></app-loading>
 
+
+<div *ngIf="error" class="alert alert-danger animated fadeIn">
+    <h3>Error</h3>
+    <p>{{ error.message }}</p>
+</div>
+
+
 <app-cards [items]="nuevasCanciones"></app-cards>
