--- a/08-example-formularios/src/app/components/template/template.component.html
+++ b/08-example-formularios/src/app/components/template/template.component.html
@@ -6,7 +6,7 @@ con su estado touched:false, untouched:false y demás campos  -->
 
   <div>
 
-    <div class="form-group row">
+    <div class="form-group row ">
       <label class="col-2 col-form-label">Nombre</label>
       <div class="col-8">
 
@@ -24,7 +24,7 @@ con su estado touched:false, untouched:false y demás campos  -->
         <div *ngIf="nombre.errors?.required">
           Required!
         </div>
-        <div *ngIf="nombre.errors?.minlength.requiredLength">
+        <div *ngIf="nombre.errors?.minlength.requiredLength" >
             At least {{ nombre.errors.minlength.requiredLength }} charaters
         </div>
       </div>
@@ -73,15 +73,63 @@ con su estado touched:false, untouched:false y demás campos  -->
     </div>
   </div>
 
+  <div class="form-group row">
+      <label class="col-2 col-form-label">País</label>
+      <div class="input-group col-md-8">
+        <select 
+          class="form-control" 
+          name="paises"
+          [(ngModel)]="user.pais"
+          >
+        
+        <option value="">Select a value</option>
+        <option *ngFor="let pais of paises" [value]="pais.cd">{{ pais.nombre }}</option>
+        </select>
+
+      </div>
+  </div>
 
 
   <div class="form-group row">
+      <label class="col-2 col-form-label">Género</label>
+      <div class="input-group col-md-8">        
+          <div class="form-check form-check-inline">
+              <input 
+                [(ngModel)]="user.genero"
+                class="form-check-input" 
+                type="radio" 
+                name="gender"                 
+                value="Male">
+              <label class="form-check-label" for="inlineRadio1">Male</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input 
+                [(ngModel)]="user.genero"
+                class="form-check-input" 
+                type="radio" 
+                name="gender"                 
+                value="Female">
+              <label class="form-check-label" for="inlineRadio2">Female</label>
+            </div>
+      </div>
+  </div>
+
+<!--[disabled]="!forma.valid": Mantengase deshabilitado miestras no sea valido-->
+  <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary">
+      <button 
+        [disabled]="!forma.valid"
+        type="submit" 
+        class="btn btn-outline-primary">
         Guardar
       </button>
     </div>
   </div>
 
 </form>
+
+
+<pre>
+  {{ user | json }}
+</pre>
