forms using data from component

--- a/08-example-formularios/src/app/app.component.html
+++ b/08-example-formularios/src/app/app.component.html
@@ -1,4 +1,10 @@
 <div class="container main-container">
-  <app-template></app-template>
+  <!--active app-template para que usted vea el ejemplo de formularios con todas las 
+  validaciones y bindings desde el html -->
+  <!-- <app-template></app-template>  -->
+  
+   <!--active app-data-validation para que usted vea el ejemplo de formularios con todas las 
+  validaciones y bindings desde el data-validation-.component.ts -->
+  <app-data-validation></app-data-validation>
 
 </div>
