--- a/08-example-formularios/src/app/components/template/template.component.html
+++ b/08-example-formularios/src/app/components/template/template.component.html
@@ -24,7 +24,7 @@ con su estado touched:false, untouched:false y demás campos  -->
         <div *ngIf="nombre.errors?.required">
           Required!
         </div>
-        <div *ngIf="nombre.errors?.minlength.requiredLength" >
+        <div *ngIf="nombre.errors?.minlength" >
             At least {{ nombre.errors.minlength.requiredLength }} charaters
         </div>
       </div>
@@ -93,26 +93,34 @@ con su estado touched:false, untouched:false y demás campos  -->
   <div class="form-group row">
       <label class="col-2 col-form-label">Género</label>
       <div class="input-group col-md-8">        
-          <div class="form-check form-check-inline">
+          <div  class="form-check form-check-inline" *ngFor="let gender of generos">
               <input 
                 [(ngModel)]="user.genero"
                 class="form-check-input" 
                 type="radio" 
-                name="gender"                 
-                value="Male">
-              <label class="form-check-label" for="inlineRadio1">Male</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input 
-                [(ngModel)]="user.genero"
-                class="form-check-input" 
-                type="radio" 
-                name="gender"                 
-                value="Female">
-              <label class="form-check-label" for="inlineRadio2">Female</label>
+                name="genero"                 
+                [value]="gender">
+              <label class="form-check-label" for="inlineRadio1">{{ gender }}</label>
             </div>
       </div>
   </div>
+
+
+  <div class="form-group row">
+    <div class="input-group col-md-8">    
+        <div class="custom-control custom-checkbox">
+            <input 
+              id="agree"
+              [(ngModel)]="user.acepta"
+              name = "acepta"
+              type="checkbox" 
+              class="custom-control-input" 
+              required
+              >
+            <label class="custom-control-label" for="agree">Acepto terminos y condiciones</label>
+          </div> 
+    </div>
+</div>
 
 <!--[disabled]="!forma.valid": Mantengase deshabilitado miestras no sea valido-->
   <div class="form-group row">
