set css for only one component

--- a/06-miscelaneous/src/app/app.component.html
+++ b/06-miscelaneous/src/app/app.component.html
@@ -2,11 +2,15 @@
   <h1>Demos <small>Angular</small></h1>
 
   <app-ng-style></app-ng-style>
-
+<br>
+<br>
 <h3>Css for one component</h3>
   <app-css-for-one></app-css-for-one>
   <p>
-    Hello app.component
+    Hello app.component.html
+  </p>
+  <p>
+    Paragraph outside the component css-for one
   </p>
 
 </div>
