--- a/06-miscelaneous/src/app/app.component.html
+++ b/06-miscelaneous/src/app/app.component.html
@@ -1,16 +1,12 @@
+
+
+<app-navbar></app-navbar>
 <div class="container">
-  <h1>Demos <small>Angular</small></h1>
-
-  <app-ng-style></app-ng-style>
-<br>
-<br>
-<h3>Css for one component</h3>
-  <app-css-for-one></app-css-for-one>
-  <p>
-    Hello app.component.html
-  </p>
-  <p>
-    Paragraph outside the component css-for one
-  </p>
-
+    <h1>Demos <small>Angular</small></h1>
+  
+    
+<router-outlet> 
+        
+    </router-outlet> 
+    
 </div>
