--- a/12-mapas/src/app/app.component.html
+++ b/12-mapas/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" >
   <span>Mapas con google</span>
 </mat-toolbar>
-
+<!--
 <div class="main-container">
         <button mat-raised-button>Basic</button>
         <button mat-raised-button color="primary">Primary</button>
@@ -9,4 +9,12 @@
         <button mat-raised-button color="warn">Warn</button>
         <button mat-raised-button disabled>Disabled</button>
         <a mat-raised-button routerLink=".">Link</a>  
+</div>
+
+<div>
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div> -->
+
+<div>
+  <app-mapa></app-mapa>
 </div>
