--- a/12-mapas/src/app/components/mapa/mapa.component.css
+++ b/12-mapas/src/app/components/mapa/mapa.component.css
@@ -1,3 +1,11 @@
 agm-map {
-  height: 600px;
+    height: 600px;
+}
+
+.google-place-input {
+    width: 70%;
+    min-width: 280px;
+    height: 2rem;
+    font-size: 1.5rem;
+    padding: 0.5rem;
 }
