--- a/12-mapas/src/app/components/mapa-editar.component.html
+++ b/12-mapas/src/app/components/mapa-editar.component.html
@@ -1,3 +1,11 @@
-<p>
-  mapa-editar works!
-</p>
+<form [formGroup]="forma">
+    <mat-form-field>
+        <input matInput placeholder="Title" formControlName="title">
+    </mat-form-field>
+
+    <mat-form-field>
+        <textarea rows="3" matInput placeholder="Description" formControlName="description"></textarea>
+    </mat-form-field>
+    <button mat-raised-button (click)="guardarCambios()">Editar</button>
+    <button (click)="onNoClick()" type="button" mat-raised-button color="warn">Cancelar</button>
+</form>
