--- a/12-mapas/src/app/components/mapa/mapa.component.html
+++ b/12-mapas/src/app/components/mapa/mapa.component.html
@@ -1,23 +1,29 @@
+<div class="container">
+    <div class="form-group">
+        <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="google-place-input" #search [formControl]="searchControl">
+    </div>
+</div>
 <mat-card>
-  <mat-card-title>Mapa de google</mat-card-title>
-  <mat-card-content>
-<!-- this creates a google map on the page with the given lat/lng from -->
-<!-- the component as the initial center of the map: -->
-<agm-map  (mapClick) = "agregarMarcador( $event )" [latitude]="lat" [longitude]="lng" [zoom]="10">
-    <agm-marker *ngFor="let marcador of marcadores; let i = index" [latitude]="marcador.lat" [longitude]="marcador.lng">
-        <agm-info-window>
-          <strong>{{ marcador.title }}</strong>
-          <p>
-              {{ marcador.description }} 
-          </p>
-          <div>
-            <button mat-raised-button (click)="openEditDialog(marcador)">Editar</button>
-            <button (click)="borrarMarcador(i)" mat-raised-button color="warn">Borrar</button>
-          </div>
-        </agm-info-window>
+    <mat-card-title>Mapa de google</mat-card-title>
 
-    </agm-marker>
-  </agm-map>
-  </mat-card-content>
+
+    <mat-card-content>
+        <!-- this creates a google map on the page with the given lat/lng from -->
+        <!-- the component as the initial center of the map: -->
+        <agm-map (mapClick)="agregarMarcador( $event )" [latitude]="lat" [longitude]="lng" [zoom]="10">
+            <agm-marker *ngFor="let marcador of marcadores; let i = index" [latitude]="marcador.lat" [longitude]="marcador.lng">
+                <agm-info-window>
+                    <strong>{{ marcador.title }}</strong>
+                    <p>
+                        {{ marcador.description }}
+                    </p>
+                    <div>
+                        <button mat-raised-button (click)="openEditDialog(marcador)">Editar</button>
+                        <button (click)="borrarMarcador(i)" mat-raised-button color="warn">Borrar</button>
+                    </div>
+                </agm-info-window>
+
+            </agm-marker>
+        </agm-map>
+    </mat-card-content>
 </mat-card>
-
