playing with google places auto complete

--- a/12-mapas/src/app/components/mapa/mapa.component.html
+++ b/12-mapas/src/app/components/mapa/mapa.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <div class="form-group">
-        <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="google-place-input" #search [formControl]="searchControl">
+        <input placeholder="search for location" autocorrect="off" 
+        autocapitalize="off" spellcheck="off" type="text" 
+        class="google-place-input" #search [formControl]="searchControl">
     </div>
 </div>
 <mat-card>
