adicionando kml file

--- a/12-mapas/src/app/components/mapa/mapa.component.html
+++ b/12-mapas/src/app/components/mapa/mapa.component.html
@@ -13,6 +13,12 @@
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
         <agm-map (mapClick)="agregarMarcador( $event )" [latitude]="lat" [longitude]="lng" [zoom]="10">
+            <agm-kml-layer 
+                [url]="kmlSrc"
+                [zIndex]="9999" 
+                (layerClick)="onClick($event)" 
+                [clickable]="true">
+            </agm-kml-layer>
             <agm-marker *ngFor="let marcador of marcadores; let i = index" [latitude]="marcador.lat" [longitude]="marcador.lng">
                 <agm-info-window>
                     <strong>{{ marcador.title }}</strong>
