--- a/12-mapas/src/app/components/mapa/mapa.component.html
+++ b/12-mapas/src/app/components/mapa/mapa.component.html
@@ -1,3 +1,5 @@
+<h1>{{containLoc}}</h1>
+
 <div class="container">
     <div class="form-group">
         <input placeholder="search for location" autocorrect="off" 
@@ -13,12 +15,19 @@
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
         <agm-map (mapClick)="agregarMarcador( $event )" [latitude]="lat" [longitude]="lng" [zoom]="10">
-            <agm-kml-layer 
+            <!-- <agm-kml-layer 
                 [url]="kmlSrc"
                 [zIndex]="9999" 
-                (layerClick)="onClick($event)" 
                 [clickable]="true">
-            </agm-kml-layer>
+            </agm-kml-layer>-->
+            <agm-polygon
+            [paths] = "polygonCoords"
+            fillColor = " #f59d7d"
+            fillOpacity = "0.2"
+            strokeWeight = "1"
+            strokeColor = "#fa4b17">
+
+            </agm-polygon>
             <agm-marker *ngFor="let marcador of marcadores; let i = index" [latitude]="marcador.lat" [longitude]="marcador.lng">
                 <agm-info-window>
                     <strong>{{ marcador.title }}</strong>
