--- a/10-firechat/src/app/app.component.html
+++ b/10-firechat/src/app/app.component.html
@@ -1,5 +1,14 @@
-<ul>
+<!-- <ul>
 <li class="text" *ngFor="let item of items | async">
   {{item.text}}
 </li>
-</ul>
+</ul> -->
+<!-- el estilo es para el espacio en blanco a la izquierda y superior
+  quitelo para que compruebe :) container sale del bootstrap y main-container de archico styles.css que tenemos en el proyecto-->
+<div class="container main-container">
+  <h1>Juliano Messages</h1>
+  <div class="chat-window">
+      <app-chat></app-chat>
+  </div>
+  
+</div>
