--- a/09-pet-app/src/app/components/pets/pets.component.html
+++ b/09-pet-app/src/app/components/pets/pets.component.html
@@ -3,50 +3,48 @@
 
 <div class="row">
     <div class="col-md-12 text-right">
-      <button 
-        type="button" 
-        class="btn btn-outline-primary" 
-        name="button"
-        [routerLink]="['/pet', 'new']">
+        <button type="button" class="btn btn-outline-primary" name="button" [routerLink]="['/pet', 'new']">
         + new
       </button>
     </div>
 </div>
 
 <div class="row animated fadeIn fast">
-  <div class="col-md-12">
-    <div class="table-responsive">
-        <table class="table  ">
-            <thead>
-              <tr class="table-primary">
-                <th scope="col">#</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Best Friend</th>
-                <th scope="col">Age</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="col-md-12">
+        <div class="table-responsive">
+            <table class="table  ">
+                <thead>
+                    <tr class="table-primary">
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Edad</th>
+                        <th scope="col">Tipo de hogar</th>
+                        <th scope="col">Best Friend</th>
+                        <th scope="col">Historia</th>
+                        <th scope="col">Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let kItem of petList | keys; let i = index ">
+                        <th scope="row">{{ i+1 }}</th>
+                        <td>{{ petList[kItem].name }}</td>
+                        <td>{{ petList[kItem].age }}</td>
+                        <td>{{ petList[kItem].houseType }}</td>
+                        <td>{{ petList[kItem].bestFriend }}</td>
+                        <td>{{ petList[kItem].history }}</td>
+                        <td>
+                            <button [routerLink]="['/pet', kItem]" class="btn btn-outline-success" type="button">Editar</button>
+                            <button class="btn btn-outline-danger" (click)="deleteRecord(kItem)" type="button">Eliminar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div *ngIf="(petList | keys).length === 0 && !loading" class="alert alert-info" role="alert">
+                <strong>Sin registros</strong>
+            </div>
+            <div *ngIf="loading" class="alert alert-warning" role="alert">
+                <strong>Esperando..</strong>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
-
-
