--- a/09-pet-app/src/app/components/pet/pet.component.html
+++ b/09-pet-app/src/app/components/pet/pet.component.html
@@ -1,36 +1,49 @@
-<h3>Pet <small>name..</small></h3>
+<h3>Pet <small>{{ pet.name }}</small></h3>
 <div class="form-group">
-    <button   [routerLink]="['pets']" class="btn btn-outline-danger"> Go Back </button>
+    <button [routerLink]="['pets']" class="btn btn-outline-danger"> Go Back </button>
+    <button type="button" (click)="addNew(forma)" class="btn btn-outline-success">New Record</button>
+
 </div>
 <hr>
 
 <div class="row animated fadeIn fast">
-  <div class="col-md-12">
-    <form>
-      <div class="form-group">
-        <label >Name</label>
-        <input type="text" class="form-control" placeholder="Name of the pet" required>
-      </div>
+    <div class="col-md-12">
+        <form (ngSubmit)="save()" #forma="ngForm">
+            <div class="form-group">
+                <label>Nombre</label>
+                <input [(ngModel)]="pet.name" name="name" type="text" class="form-control" placeholder="Name of the pet" required>
+            </div>
 
-      <div class="form-group">
-          <label >Age</label>
-          <select  class="form-control" name="" id="">
-            <option value="05"> 0-5</option>
-            <option value="510">5-10</option>
+            <div class="form-group">
+                <label>Edad </label>
+                <input [(ngModel)]="pet.age" name="age" type="number" class="form-control" required>
+            </div>
+
+            <div class="form-group">
+                <label>El lugar donde vives es</label>
+                <select [(ngModel)]="pet.houseType" name="houseType" class="form-control" id="">
+            <option value="apartamento"> Apartamento </option>
+            <option value="finca">Finca</option>
+            <option value="hogarPaso">Hogar de paso</option>
+            <option value="Casa">Casa</option>
           </select>
-      </div>
+            </div>
 
-      <div class="form-group">
-            <label >History</label>
-            <textarea  class="form-control" name="" type="text"  required>
+            <div class="form-group">
+                <label>Mi mejor amigo es </label>
+                <input [(ngModel)]="pet.bestFriend" name="bestFriend" type="text" class="form-control" placeholder="Name of your human best friend" required>
+            </div>
+
+            <div class="form-group">
+                <label>History</label>
+                <textarea [(ngModel)]="pet.history" name="history" class="form-control" type="text" required>
 
             </textarea>
-      </div>      
+            </div>
 
-      <div class="form-group">
-          <button type="submit" class="btn btn-outline-primary"> Save</button>
+            <div class="form-group">
+                <button [disabled]="!forma.valid" type="submit" class="btn btn-outline-primary"> Save</button>
+            </div>
+        </form>
     </div>
-    </form>
-  </div>
 </div>
-
