--- a/11-peliculas-app/src/app/app.component.html
+++ b/11-peliculas-app/src/app/app.component.html
@@ -1,7 +1,2 @@
 <app-navbar></app-navbar>
-<div class="jumbotron jumbotron-fluid animated fadeIn">
-  <div class="container">
-    <h1 class="display-6">Net Movies</h1>
-    <p class="lead">Tarea de peliculas </p>
-  </div>
-</div>
+<app-home></app-home>
