--- a/11-peliculas-app/src/app/components/home/home.component.html
+++ b/11-peliculas-app/src/app/components/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron jumbotron-fluid animated fadeIn">
+  <div class="container">
+    <h1 class="display-6">Net Movies</h1>
+    <p class="lead">Tarea de peliculas </p>
+  </div>
+</div>
+
+<app-movie-row-home></app-movie-row-home>
+<app-movie-row-home></app-movie-row-home>
+<app-movie-row-home></app-movie-row-home>
