--- a/11-peliculas-app/src/app/components/home/home.component.html
+++ b/11-peliculas-app/src/app/components/home/home.component.html
@@ -5,80 +5,7 @@
     </div>
 </div>
 
-<div class="media">
-    <div class="column">
-        <h2>Pelis Populares</h2>
-        <section class="index">
-            <div class="column" *ngIf="popular">
-                <div class="info first">
-                    <a href="#">
-                        <img src="http://image.tmdb.org/t/p/w400/{{ popular[0].backdrop_path }}" class="img-fluid">
-                    </a>
-                    <span>
-                        <a class="text" href="#">
-                            <h3>Nombre peli</h3>
-                        </a>
-                    </span>
-                </div>
-                <div class="info second">
-                    <a href="#">
-                        <img src="http://image.tmdb.org/t/p/w200/{{ popular[1].backdrop_path }}" class="img-fluid">
-                    </a>
-                    <span>
-                        <a class="text" href="#">
-                            <h3>Nombre peli</h3>
-                        </a>
-                    </span>
-
-                </div>
-                <div class="info third">
-                    <a href="#">
-                        <img src="http://image.tmdb.org/t/p/w200/{{ popular[2].backdrop_path }}" class="img-fluid">
-                    </a>
-                    <span>
-                        <a class="text" href="#">
-                            <h3>Nombre peli</h3>
-                        </a>
-                    </span>
-                </div>
-
-            </div>
-        </section>
-        <section class="index">
-            <div class="column" *ngIf="popular">
-                <div class="info second">
-                    <a href="#">
-                        <img src="http://image.tmdb.org/t/p/w200/{{ popular[3].backdrop_path }}" class="img-fluid">
-                    </a>
-                    <span>
-                        <a class="text" href="#">
-                            <h3>Nombre peli</h3>
-                        </a>
-                    </span>
-
-                </div>
-                <div class="info third">
-                    <a href="#">
-                        <img src="http://image.tmdb.org/t/p/w200/{{ popular[4].backdrop_path }}" class="img-fluid">
-                    </a>
-                    <span>
-                        <a class="text" href="#">
-                            <h3>Nombre peli</h3>
-                        </a>
-                    </span>
-                </div>
-                <div class="info first">
-                    <a href="#">
-                        <img src="http://image.tmdb.org/t/p/w400/{{ popular[5].backdrop_path }}" class="img-fluid">
-                    </a>
-                    <span>
-                        <a class="text" href="#">
-                            <h3>Nombre peli</h3>
-                        </a>
-                    </span>
-                </div>
-            </div>
-        </section>
-    </div>
-
-</div>
+<app-row-home [inputMovieList]="popular"></app-row-home>
+<app-row-home [inputMovieList]="popular"></app-row-home>
+<app-row-home [inputMovieList]="popular"></app-row-home>
+<app-row-home [inputMovieList]="popular"></app-row-home>
