--- a/11-peliculas-app/src/app/components/row-home/row-home.component.html
+++ b/11-peliculas-app/src/app/components/row-home/row-home.component.html
@@ -1,6 +1,6 @@
 <div class="media">
     <div class="column">
-        <h2>Pelis Populares</h2>
+        <h2>{{inputTitle}}</h2>
         <section class="index">
             <div class="column" *ngIf="inputMovieList">
                 <div class="info first">
